v1.8 XW 30-07-2019
fixed: printf (issue #8)

v1.7 XW 29-07-2019
removed: unnecessary headers
added: return line after printf

v1.6 XW 28-07-2019
changed: start point to AI/AI
updated: Zero Java code
improved: run.sh
added: console out put at atomicvariable
removed: something

v1.5 XW 26-07-2019
fixed: loads multiple times (issue #5)

v1.4 XW 20-07-2019
fixed: naming COPY TO DOMAINZERO

v1.3 XW 18-07-2019
removed: kernel.dep in makefile

v1.2 XW 12-07-2019
removed: jdk and zero
moved: source code into src (issue #2)

v1.1 XW 08-07-2019
removed jx

v1.0 XW 05-07-2019
working