@@ -1,5 +1,6 @@
 v1.8 XW 30-07-2019
 fixed: printf (issue #8)
+fixed: missing zero_FastMemory.s file (issue #9)
 
 v1.7 XW 29-07-2019
 removed: unnecessary headers
